:lipstick: FIX: Change blend-mode to normal so texture is visible on dark background

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1026,7 +1026,7 @@ section {
 .servicios,
 .services {
   background-image: url("../img/textures/temporal-gradient.png");
-  background-blend-mode: overlay;
+  background-blend-mode: normal;
   background-size: 200px;
   background-position: top left;
   background-repeat: repeat;
